--- a/index.html
+++ b/index.html
@@ -157,5 +157,6 @@
     // 默认加载周榜
     loadImages('w');
   </script>
+  <p>想了解本站是如何搭建的吗？<a href="https://t.me/AcoFork">联系我</a></p>
 </body>
 </html>
