--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pixiv 排行榜图片展示</title>
+    <meta name="description" content="收集Pixiv月/周/日/新榜，实时更新。">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
