--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="https://q2.qlogo.cn/headimg_dl?dst_uin=2973517380&amp;spec=5">
     <title>Pixiv 排行榜图片展示</title>
     <meta name="description" content="收集Pixiv月/周/日/新榜，实时更新。">
     <link rel="stylesheet" href="style.css">
