--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <button onclick="loadImages('w')" id="btn-w">周榜</button>
             <button onclick="loadImages('d')" id="btn-d">日榜</button>
             <button onclick="loadImages('n')" id="btn-n">新人榜</button>
+            <a href="https://px.onani.cn" target="_blank" class="button">永久站</a>
         </div>
         <div class="waterfall" id="gallery"></div>
         <div class="loading" id="loading">加载中...</div>
