--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1683686345039700"
      crossorigin="anonymous"></script>
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="8526aa29-c527-4fb4-8970-e5e6b0ca68ec"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="https://q2.qlogo.cn/headimg_dl?dst_uin=2973517380&amp;spec=5">
