--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="Refresh" content="0; url=https://px.onani.cn">
+    <meta http-equiv="Refresh" content="0; url=https://alist.onani.cn/pixiv-star">
     <meta http-equiv="Status" content="301 Moved Permanently">
-    <title>Redirecting...</title>
+    <title>Pixiv 站长精选</title>
+    <meta name="description" content="Pixiv 站长精选，带你看遍站长XP">
 </head>
 <body>
-    <p>如果页面没有自动跳转，请点击 <a href="https://px.onani.cn">这里</a>.</p>
+    <p>如果页面没有自动跳转，请点击 <a href="https://alist.onani.cn/pixiv-star">这里</a>.</p>
 </body>
 </html>
